objects/PaymentMethodOptionConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to setup country wise payment method options.</description>
    <fields>
        <fullName>Billing_Batch__c</fullName>
        <label>Billing Batch</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CardsPaymentGateway__c</fullName>
        <description>Configuration field to store payment gateway for cards</description>
        <label>CardsPaymentGateway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>Field to store country code</description>
        <label>CountryCode</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Format__c</fullName>
        <label>Currency Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultPaymentMethod__c</fullName>
        <description>This field is used to show default payment method on change payment method page for country.</description>
        <label>DefaultPaymentMethod</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaypalMerchantPassword__c</fullName>
        <label>PaypalMerchantPassword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaypalMerchantSignature__c</fullName>
        <label>PaypalMerchantSignature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaypalMerchantUsername__c</fullName>
        <label>PaypalMerchantUsername</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaypalPaymentGateway__c</fullName>
        <label>PaypalPaymentGateway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paypal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paypal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZuoraCreditCardPageId__c</fullName>
        <description>Configuration field to store zuora credit card page id.</description>
        <label>ZuoraCreditCardPageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZuoraDirectDebitPageId__c</fullName>
        <description>Configuration field to store zuora direct debit page id.</description>
        <label>ZuoraDirectDebitPageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PaymentMethodOptionConfig</label>
</CustomObject>